--- a/DogTracker/src/main/resources/static/index.html
+++ b/DogTracker/src/main/resources/static/index.html
@@ -38,5 +38,22 @@
       /><br />
       <button name="submit">Create Dog</button>
     </form>
+    <br>
+    <br>
+    
+    <form name="updateForm">
+      <input type="text" name="name" placeholder="name" /><br />
+      <input type="text" name="breed" placeholder="breed" /><br />
+      <input type="text" name="size" placeholder="size S/M/L/XL" /><br />
+      <input type="text" name="aggressive" placeholder="Y/N" /><br />
+      <input type="text" name="image" placeholder="Image Address" /><br />
+      <input
+        type="text"
+        size="50"
+        name="description"
+        placeholder="description"
+      /><br />
+      <button name="update">Update Dog</button>
+    </form>
   </body>
 </html>
