--- a/DogTracker/src/main/resources/static/index.html
+++ b/DogTracker/src/main/resources/static/index.html
@@ -29,7 +29,7 @@
       <input type="text" name="breed" placeholder="breed" /><br />
       <input type="text" name="size" placeholder="size S/M/L/XL" /><br />
       <input type="text" name="aggressive" placeholder="Y/N" /><br />
-      <input type="text" name="image" placeholder="Image Address" /><br />
+      <input type="text" name="imageUrl" placeholder="Image Address" /><br />
       <input
         type="text"
         size="50"
